# BKeeper

./: .gitignore  Global.h  Makefile.am  README.md  bootstrap.sh  configure.ac
src/: Benchmark.hpp  Enums.hpp  GaugeGroupInfo.hpp  main.cpp
src/Benchmark/: Benchmark.cpp  Benchmark.hpp  Dispatch.hpp  FixedIterCG.hpp
src/Benchmark/PerformanceMetrics/: Comms.cpp  Flops.cpp  Flops.hpp  LatticeParameters.hpp
src/Benchmark/Specialisations/: SU2Adj.cpp  SU2Adj.hpp  SU2Fund.cpp  SU2Fund.hpp  SU2TwoIndexAntiSymm.cpp  SU2TwoIndexAntiSymm.hpp  SU2TwoIndexSymm.cpp  SU2TwoIndexSymm.hpp  SU3Adj.cpp  SU3Adj.hpp  SU3Fund.cpp  SU3Fund.hpp  SU3TwoIndexAntiSymm.cpp  SU3TwoIndexAntiSymm.hpp  SU3TwoIndexSymm.cpp  SU3TwoIndexSymm.hpp  SU4Adj.cpp  SU4Adj.hpp  SU4Fund.cpp  SU4Fund.hpp  SU4TwoIndexAntiSymm.cpp  SU4TwoIndexAntiSymm.hpp  SU4TwoIndexSymm.cpp  SU4TwoIndexSymm.hpp  Sp4Adj.hpp  Sp4Fund.cpp  Sp4Fund.hpp  Sp4TwoIndexAntiSymm.cpp  Sp4TwoIndexAntiSymm.hpp  Sp4TwoIndexSymm.cpp  Sp4TwoIndexSymm.hpp
src/Instantiation/: KernelImplementation.hpp
src/Instantiation/SU2Adj/: Implementation.hpp  Wilson.cpp
src/Instantiation/SU2Fund/: Implementation.hpp  Wilson.cpp
src/Instantiation/SU2TwoIndexAntiSymmetric/: Implementation.hpp  Wilson.cpp
src/Instantiation/SU2TwoIndexSymmetric/: Implementation.hpp  Wilson.cpp
src/Instantiation/SU3Adj/: Implementation.hpp  Wilson.cpp
src/Instantiation/SU3Fund/: Implementation.hpp  Wilson.cpp
src/Instantiation/SU3TwoIndexAntiSymmetric/: Implementation.hpp  Wilson.cpp
src/Instantiation/SU3TwoIndexSymmetric/: Implementation.hpp  Wilson.cpp
src/Instantiation/SU4Adj/: Implementation.hpp  Wilson.cpp
src/Instantiation/SU4Fund/: Wilson.cpp
src/Instantiation/SU4TwoIndexAntiSymmetric/: Implementation.hpp  Wilson.cpp
src/Instantiation/SU4TwoIndexSymmetric/: Implementation.hpp  Wilson.cpp
src/Instantiation/Sp4Fund/: Implementation.hpp  Wilson.cpp
src/Instantiation/Sp4TwoIndexAntiSymmetric/: Implementation.hpp  Wilson.cpp
src/Instantiation/Sp4TwoIndexSymmetric/: Implementation.hpp  Wilson.cpp
src/Logger/: BKeeperLog.cpp  BKeeperLog.hpp
src/Parameters/: Parameters.cpp  Parameters.hpp
src/PerformanceMetrics/: Comms.cpp  Comms.hpp  Flops.cpp  LatticeParameters.hpp  Memory.cpp  Memory.hpp
