ACLOCAL_AMFLAGS = -I .buildutils/m4

bin_PROGRAMS = BKeeper
BKeeper_SOURCES = src/Instantiation/SU2Fund/Wilson.cpp \
                  src/Instantiation/SU2Adj/Wilson.cpp \
                  src/Instantiation/SU2TwoIndexSymmetric/Wilson.cpp \
                  src/Instantiation/SU2TwoIndexAntiSymmetric/Wilson.cpp \
                  src/Instantiation/SU3Fund/Wilson.cpp \
                  src/Instantiation/SU3Adj/Wilson.cpp \
                  src/Instantiation/SU3TwoIndexSymmetric/Wilson.cpp \
                  src/Instantiation/SU3TwoIndexAntiSymmetric/Wilson.cpp \
                  src/Instantiation/SU4Fund/Wilson.cpp \
                  src/Instantiation/SU4Adj/Wilson.cpp \
                  src/Instantiation/SU4TwoIndexSymmetric/Wilson.cpp \
                  src/Instantiation/SU4TwoIndexAntiSymmetric/Wilson.cpp \
                  src/Instantiation/Sp4Fund/Wilson.cpp \
                  src/Instantiation/Sp4TwoIndexSymmetric/Wilson.cpp \
                  src/Instantiation/Sp4TwoIndexAntiSymmetric/Wilson.cpp \
                  src/main.cpp \
                  src/Benchmark/Benchmark.cpp \
                  src/Benchmark/PerformanceMetrics/Comms.cpp \
                  src/Benchmark/PerformanceMetrics/Flops.cpp \
                  src/Benchmark/PerformanceMetrics/Memory.cpp \
                  src/Benchmark/Specialisations/SU2Fund.cpp \
                  src/Benchmark/Specialisations/SU2Adj.cpp \
                  src/Benchmark/Specialisations/SU2TwoIndexSymm.cpp \
                  src/Benchmark/Specialisations/SU2TwoIndexAntiSymm.cpp \
                  src/Benchmark/Specialisations/SU3Fund.cpp \
                  src/Benchmark/Specialisations/SU3Adj.cpp \
                  src/Benchmark/Specialisations/SU3TwoIndexSymm.cpp \
                  src/Benchmark/Specialisations/SU3TwoIndexAntiSymm.cpp \
                  src/Benchmark/Specialisations/SU4Fund.cpp \
                  src/Benchmark/Specialisations/SU4Adj.cpp \
                  src/Benchmark/Specialisations/SU4TwoIndexSymm.cpp \
                  src/Benchmark/Specialisations/SU4TwoIndexAntiSymm.cpp \
                  src/Benchmark/Specialisations/Sp4Fund.cpp \
                  src/Benchmark/Specialisations/Sp4TwoIndexSymm.cpp \
                  src/Benchmark/Specialisations/Sp4TwoIndexAntiSymm.cpp
